--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "emailservice",
+  "name": "mpr",
   "version": "1.0.0",
-  "description": "",
+  "description": "college project",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "test": "node app.js"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anshuman182005/MPR.git"
+  },
+  "keywords": [
+    "nodejs",
+    "mpr"
+  ],
+  "author": "anshuman",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/anshuman182005/MPR/issues"
+  },
+  "homepage": "https://github.com/anshuman182005/MPR#readme",
   "dependencies": {
-    "csv-parser": "^3.0.0",
-    "express": "^4.18.3",
-    "formidable": "^3.5.1",
+    "express": "^4.21.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.11",
-    "nodemon": "^3.1.0",
+    "nodemailer": "^6.9.15",
     "xlsx": "^0.18.5"
   }
 }
