--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "college project",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "node app.js"
+    "start": "nodemon app.js",
+    "test": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "express": "^4.21.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.7",
     "xlsx": "^0.18.5"
   }
 }
